--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,18 +16,20 @@ body {
 
 /* ヘッダーのスタイル */
 header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
     background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 100%;
 }
 
 header nav {
     display: flex;
-    justify-content: flex-end;
-    margin-right: 20px;
+    justify-content: center;
 }
 
 header a {
@@ -35,13 +37,14 @@ header a {
     text-decoration: none;
     font-weight: bold;
     margin-left: 15px;
+    margin-right: 15px;
 }
 
 /* コンテンツエリアのスタイル */
 .content {
     padding: 20px;
     max-width: 800px;
-    margin: 20px auto;
+    margin: 80px auto 20px; /* Adjust the margin-top to avoid overlap with fixed header */
     background: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
