--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,13 +13,13 @@
 <div class="container">
   <!-- サイドバー -->
   <div class="sidebar">
-    <h1>IKUMA NAGAHARA</h1>
-    <p>Software Engineering Student</p>
+    <h1>NAGAHARA IKUMA</h1>
+    <p>Software Engineering Student - M2</p>
     <nav>
       <ul>
-        <li><a href="#about" class="nav-link" data-section="about">ABOUT</a></li>
-        <li><a href="#experience" class="nav-link" data-section="experience">EXPERIENCE</a></li>
-        <li><a href="#skills" class="nav-link" data-section="skills">SKILLS</a></li>
+        <li><a href="#about" class="nav-link" data-section="about">ー　ABOUT</a></li>
+        <li><a href="#experience" class="nav-link" data-section="experience">ー　EXPERIENCE</a></li>
+        <li><a href="#skills" class="nav-link" data-section="skills">ー　SKILLS</a></li>
       </ul>
     </nav>
     <div class="social-links">
