--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <section id="about" class="profile">
-  <img src="/images/face.jpg" alt="Profile photo of IKUMA NAGAHARA, a Software Engineer" class="profile-photo">
+  <img src="/images/face.jpg" alt="Profile photo of {{ .Site.Params.name }}, {{ .Site.Params.title }}" class="profile-photo">
   <div class="description">
     {{ range .Site.Params.introduce }}
     <p>{{ .text }}</p>
@@ -9,12 +9,11 @@
 </section>
 
 <section id="experience" class="section">
-  <h2>EXPERIENCE</h2>
+  <h2>{{ i18n "experience" }}</h2>
   {{ range .Site.Params.experience }}
   <div class="experience-row">
     <div class="experience-left">
       <p>{{ .date }}</p>
-      <!-- ロゴにリンクを追加 -->
       {{ if .logo }}
       <a href="{{ .url }}" target="_blank">
         <img src="{{ .logo }}" alt="{{ .title }} logo" class="experience-logo">
@@ -37,7 +36,7 @@
 </section>
 
 <section id="skills" class="section">
-  <h2>PROFESSIONAL TECHNICAL SKILLS</h2>
+  <h2>{{ i18n "skills" }}</h2>
   <div class="skills-container">
     {{ range .Site.Params.professional_skills }}
     <div class="skills-category">
@@ -53,5 +52,4 @@
     {{ end }}
   </div>
 </section>
-
 {{ end }}
