--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,9 +15,9 @@
     <p>{{ .Site.Params.title }}</p>
     <nav>
       <ul>
-        <li><a href="#about" class="nav-link">{{ i18n "about" }}</a></li>
-        <li><a href="#experience" class="nav-link">{{ i18n "experience" }}</a></li>
-        <li><a href="#skills" class="nav-link">{{ i18n "skills" }}</a></li>
+        <li><a href="#about" class="nav-link" data-section="about">{{ i18n "about" }}</a></li>
+        <li><a href="#experience" class="nav-link" data-section="experience">{{ i18n "experience" }}</a></li>
+        <li><a href="#skills" class="nav-link" data-section="skills">{{ i18n "skills" }}</a></li>
       </ul>
     </nav>
     <div class="social-links">
