--- a/layouts/index.html
+++ b/layouts/index.html
@@ -86,7 +86,7 @@
     <!-- 左側: Periodなどを表示 -->
     <div class="project-left">
       {{ with .period }}
-      <p><strong>Period:</strong> {{ . }}</p>
+      <p><strong>{{ . }}</strong></p>
       {{ end }}
     </div>
 
