--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,6 +21,7 @@
         <li><a href="#experience" class="nav-link" data-section="experience">{{ i18n "experience" }}</a></li>
         <li><a href="#skills" class="nav-link" data-section="skills">{{ i18n "skills" }}</a></li>
         <li><a href="#projects" class="nav-link" data-section="projects">{{ i18n "projects" }}</a></li>
+        <li><a href="#languages" class="nav-link" data-section="languages">{{ i18n "languages" }}</a></li>
       </ul>
     </nav>
     <div class="social-links">
