--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="{{ .Lang }}">
+
 <head>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>{{ .Title }}</title>
+
   <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
   <link rel="icon" href="{{ "/icons/favicon.png" | relURL }}" type="image/png">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
 <div class="container">
   <div class="sidebar">
@@ -24,14 +28,25 @@
         <li><a href="#languages" class="nav-link" data-section="languages">{{ i18n "languages" }}</a></li>
       </ul>
     </nav>
+
     <div class="social-links">
-      <a href="{{ .Site.Params.email }}" target="_blank"><i class="fas fa-envelope"></i></a>
-      <a href="{{ .Site.Params.github }}" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="{{ .Site.Params.linkedin }}" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="{{ .Site.Params.email }}" target="_blank" title="Email">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="{{ .Site.Params.github }}" target="_blank" title="GitHub">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="{{ .Site.Params.linkedin }}" target="_blank" title="LinkedIn">
+        <i class="fab fa-linkedin"></i>
+      </a>
       {{ with .Site.Params.resume }}
-      <a href="{{ . }}" target="_blank"><i class="fas fa-file-pdf"></i></a>
+      <a href="{{ . }}" target="_blank" title="Resume">
+        <i class="fas fa-file-pdf"></i>
+      </a>
       {{ end }}
     </div>
+
+
     <!-- 言語切り替えのリンク -->
     <div class="language-switcher">
       {{ $count := len .Site.Languages }}
@@ -42,11 +57,15 @@
       {{ if lt (add $index 1) $count }} | {{ end }}
       {{ end }}
     </div>
+
   </div>
+
   <main>
     {{ block "main" . }}{{ end }}
   </main>
 </div>
+
 <script src="{{ "js/script.js" | relURL }}"></script>
 </body>
+
 </html>
